Refactored MC_sample_K

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a2f11578",
+   "id": "b9132c50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f18d359",
+   "id": "285435bf",
    "metadata": {},
    "source": [
     "## IMPORTANT: Please use static random seeds in **EVERY** cell where you use a random function, so that the result does **NOT** change at every run."
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecc757ba",
+   "id": "fca94d88",
    "metadata": {},
    "source": [
     "# 1. ARTIFICIAL DATA"
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c318fc7",
+   "id": "3cbad2b7",
    "metadata": {},
    "source": [
     "### Task:\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6e25cfe0",
+   "id": "9fe57c74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "720e56ad",
+   "id": "84411aab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "355a3a5c",
+   "id": "4ef00cfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "51f7868c",
+   "id": "8a08872b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f55c96de",
+   "id": "7ab7d301",
    "metadata": {},
    "source": [
     "# 2 MC SAMPLER"
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc652c9f",
+   "id": "ee3c3baf",
    "metadata": {},
    "source": [
     "# 2.1 MCMC Sampling"
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b4ff74a",
+   "id": "1d6277dd",
    "metadata": {},
    "source": [
     "### Task:\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "69050e8a",
+   "id": "0589ed04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9d16baba",
+   "id": "b3ef3fee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "significant-prairie",
+   "id": "b3f8c4cd",
    "metadata": {},
    "source": [
     "# 2.2 Beta sampling"
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-mileage",
+   "id": "cab1bdab",
    "metadata": {},
    "source": [
     "### Task:\n",
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "violent-explorer",
+   "id": "f58908a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,14 +380,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "global-exclusive",
+   "id": "cad84259",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "3360d53c",
+   "id": "cba4f150",
    "metadata": {},
    "source": [
     "# 2.3 Metropolis-Hastings MC Sampling"
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213f252b",
+   "id": "3b4be1d1",
    "metadata": {},
    "source": [
     "### Task:\n",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88a743aa",
+   "id": "41484e11",
    "metadata": {},
    "source": [
     "\n",
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4f7ddbae",
+   "id": "8be13ef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "74f6e094",
+   "id": "401e95b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bf15f0c1",
+   "id": "951b9801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9122d812",
+   "id": "62141116",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b511318c",
+   "id": "f0580c02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -502,14 +502,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd868d50",
+   "id": "acf608f5",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4472024a",
+   "id": "a13a48be",
    "metadata": {},
    "source": [
     "# 2.4 BDMCMC Sampling"
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ff0b5d",
+   "id": "a128f92c",
    "metadata": {},
    "source": [
     "### Task:\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5ebc07b8",
+   "id": "349ed268",
    "metadata": {},
    "outputs": [
     {
@@ -553,51 +553,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "933fdccd",
+   "execution_count": 18,
+   "id": "d7a5aadd",
    "metadata": {},
    "outputs": [],
    "source": [
     "import subprocess\n",
     "\n",
+    "# Remember to install BDgraph package version 2.62 on your R environment\n",
+    "# You'll need to run the following commands:\n",
+    "# remove.packages(\"BDgraph\")\n",
+    "# install.packages(\"remotes\")\n",
+    "# library(remotes)\n",
+    "# install_version(\"BDgraph\", \"2.62\")\n",
+    "\n",
+    "\n",
     "def MC_sample_K(G, b, shape_matrix, n):\n",
     "    # save G to csv\n",
-    "    numpy.savetxt(\"adj.csv\", G, delimiter=\",\")\n",
+    "    np.savetxt(\"adj.csv\", G, delimiter=\",\")\n",
     "    # save shape_matrix to csv (OR pass them as parameters to RScript)\n",
-    "    numpy.savetxt(\"shape.csv\", shape_matrix, delimiter=\",\")\n",
+    "    np.savetxt(\"shape.csv\", shape_matrix, delimiter=\",\")\n",
     "    # call R script using python.subprocess\n",
     "    subprocess.run(\"Rscript --vanilla rgwish.R {} {}\".format(b,n), shell=True) # -> HOW MANY SAMPLES ARE REQUIRED? SHOULD THIS ALSO BE VARIABLE AND THEREFORE PASSED TO R?\n",
     "    # read the results from csv (OR get the result back from R script)\n",
-    "    K = numpy.array(list(numpy.loadtxt(open(\"gwish.csv\", \"rb\"), delimiter=\",\"))).astype(\"float\")\n",
-    "    # return resulting K\n",
+    "    \n",
+    "    # Always better to open file handlers within a \"with\" statement (otherwise you must take care of closing the file)\n",
+    "    with open(\"gwish.csv\", \"r\") as csv_file:  \n",
+    "        K = np.loadtxt(csv_file, delimiter=\",\")\n",
+    "    \n",
     "    return K\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "7d58fe1a",
+   "execution_count": 19,
+   "id": "9ead4caf",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error in library(BDgraph) : there is no package called ‘BDgraph’\n",
-      "Ejecución interrumpida\n"
+      "[1] \"[R] rgwish will now be sampling 1 samples. The b (degrees of freedom) is set to 5\"\n",
+      "[1] \"[R] rgwish succesfully executed!\"\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[ 8.6 ,  0.  ,  0.94,  0.  ,  0.  ],\n",
-       "       [ 0.  , 10.42,  0.  ,  0.  ,  0.  ],\n",
-       "       [ 0.94,  0.  ,  1.42,  0.  ,  0.  ],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  3.63,  0.  ],\n",
-       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  3.83]])"
+       "array([[ 5.35,  0.  , -2.55,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.23,  0.  ,  0.  ,  0.  ],\n",
+       "       [-2.55,  0.  ,  9.49,  0.  ,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.38,  0.  ],\n",
+       "       [ 0.  ,  0.  ,  0.  ,  0.  ,  1.13]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,13 +621,13 @@
     "    [0,0,0,0,0],\n",
     "    [0,0,0,0,0]]\n",
     "shape_matrix = np.eye(k,dtype=int)\n",
-    "MC_sample_K(G,5,shape_matrix, 1)"
+    "MC_sample_K(G, 5, shape_matrix, 1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "2aa9ecb5",
+   "id": "b1de0675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e2c41a0",
+   "id": "5296ad46",
    "metadata": {},
    "source": [
     "# TESTING"
@@ -702,7 +713,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f67b86f",
+   "id": "035f8faa",
    "metadata": {},
    "source": [
     "### Data Generation"
@@ -711,7 +722,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e2901c32",
+   "id": "29f07f4d",
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +762,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "90cc63ed",
+   "id": "40f1b37f",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ae6fb405",
+   "id": "d119d7fc",
    "metadata": {},
    "outputs": [
     {
@@ -815,7 +826,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85c168cc",
+   "id": "19053d47",
    "metadata": {},
    "source": [
     "### MC Samplers"
@@ -824,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "eea7d1ae",
+   "id": "e7ee3ada",
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b9c571f8",
+   "id": "47b5b4da",
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +944,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "e5c7ebe2",
+   "id": "9e59bb27",
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e63bbdcd",
+   "id": "82532ac4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "065cfde0",
+   "id": "a36e1413",
    "metadata": {},
    "source": [
     "# MAIN ALGORITHM"
@@ -977,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "549527c8",
+   "id": "3f0a1f38",
    "metadata": {},
    "source": [
     "### Generating Data"
@@ -986,7 +997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d54485e0",
+   "id": "bb3a1214",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -997,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4639ecbe",
+   "id": "2a08af2a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19af359",
+   "id": "b431376d",
    "metadata": {},
    "source": [
     "# SAMPLER"
@@ -1016,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "176fbc81",
+   "id": "a828ce0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1034,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b10067e1",
+   "id": "b7383a11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1091,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af182272",
+   "id": "e75d8157",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1091,9 +1102,9 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8 (d2)",
    "language": "python",
-   "name": "python3"
+   "name": "d2"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1105,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
