Work in progress. Serializing objects between R and py and bdmcmc.R

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -1496,8 +1496,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "fdf210a1",
+   "execution_count": null,
+   "id": "7d7bc071",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# R code, just for inspiration\n",
+    "#\n",
+    "#     # (K, G) parameters update and joint draw\n",
+    "#     data_BD = matrix(0,nrow = p, ncol = p)\n",
+    "#     for(i in 1:n){\n",
+    "#       data_BD = data_BD  + t(beta[[i]] - mu)%*%(beta[[i]] - mu)\n",
+    "#     }\n",
+    "#     if(iter != 1) {\n",
+    "#       fit = FGM::bdgraph(data = data_BD, n = n, method = 'ggm', algorithm = 'bdmcmc', iter = 1, burnin = 0,\n",
+    "#                     g.prior = gprior, df.prior = d0, g.start = fit$last_graph, save = T)\n",
+    "#     } else {\n",
+    "#       fit = FGM::bdgraph(data = data_BD, n = n, method = 'ggm', algorithm = 'bdmcmc', iter = 1, burnin = 0,\n",
+    "#                     g.prior = gprior, df.prior = d0, g.start = G0, save = T)\n",
+    "#     }\n",
+    "#     K = fit$last_K"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "b9e080c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "\n",
+    "\n",
+    "def serialize_matrix(m):\n",
+    "    if len(m.shape) != 2:\n",
+    "        raise Exception(\"Can not serialize ill-shaped matrix!\")\n",
+    "    res = '\\n'.join(' '.join(str(entry) for entry in row)  # Space between entries, newline between rows\n",
+    "                     for row in m)\n",
+    "    return '\"' + res + '\"'\n",
+    "\n",
+    "\n",
+    "def deserialize_matrix(line, shape, separator=' '):\n",
+    "    return np.fromstring(line, sep=separator).reshape(shape)\n",
+    "\n",
+    "\n",
+    "def MC_sample_GK(G, K, multivariate_gaussian_data_matrix_Z, degrees_of_freedom_b, debug=False, p_of_existing_links=0.5):\n",
+    "    size = G.shape[0]\n",
+    "    n = multivariate_gaussian_data_matrix_Z.shape[0]\n",
+    "    \n",
+    "    # Serialize the inputs\n",
+    "    G = serialize_matrix(G)\n",
+    "    K = serialize_matrix(K)\n",
+    "    \n",
+    "    # call R script using python.subprocess\n",
+    "    command = f\"Rscript --vanilla bdmcmc.R {b} {n} {G} {K} {'TRUE' if debug else 'FALSE'}\"\n",
+    "    result = subprocess.run(command, \n",
+    "                            shell=True, \n",
+    "                            capture_output=True,\n",
+    "                            text=True)\n",
+    "    \n",
+    "    if result.returncode != 0:  # Something went wrong\n",
+    "        print(result.stdout)\n",
+    "        print(result.stderr)\n",
+    "        raise Exception(\"Rscript error! Check the previous logs for more details\")\n",
+    "    \n",
+    "    if debug:\n",
+    "        print(result.stdout)\n",
+    "    \n",
+    "    # The last two lines of the R output MUST be the sampled matrices\n",
+    "    lines = result.stdout.rsplit('\\n', 2)  # Split only the last two lines  https://www.w3schools.com/python/ref_string_rsplit.asp\n",
+    "    G = deserialize_matrix(lines[-2], shape=(size, size))  # Line before last\n",
+    "    K = deserialize_matrix(lines[-1], shape=(size, size))  # Last line\n",
+    "    return G, K #, result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8020680e",
+   "metadata": {},
+   "source": [
+    "# OLD CODE BELOW. TESTS MUST BE REVIEWED TOO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcea49de",
+   "metadata": {},
+   "source": [
+    "### Task:\n",
+    "\n",
+    "You must implement a function that receives matrices $W$, $Z_{i+1}$ and $H_{i+1}$ and generates the next $G_{i+1}$ and $K_{i+1}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "082aefd1",
    "metadata": {},
    "outputs": [],
    "source": [
