--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -375,14 +375,14 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 3.,  2.,  4.,  5.,  1.,  6.,  7.,  9., 10.,  6.,  4.,  0.],\n",
-       "       [ 7.,  0.,  2.,  1.,  1.,  2.,  1.,  1.,  3.,  0.,  0.,  1.],\n",
-       "       [ 0.,  0.,  0.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
-       "       [ 7.,  1.,  2., 10.,  1.,  5., 10.,  7., 10.,  8.,  2.,  2.],\n",
-       "       [ 1.,  0.,  4.,  2.,  0.,  1.,  1.,  2.,  2.,  0.,  0.,  0.],\n",
-       "       [ 3.,  1.,  4.,  8.,  2.,  4.,  5., 10.,  5.,  8.,  4.,  1.],\n",
-       "       [ 0.,  1.,  1.,  0.,  0.,  0.,  1.,  0.,  3.,  0.,  0.,  0.],\n",
-       "       [ 7.,  1.,  3.,  8.,  0.,  3.,  4.,  3.,  2., 10.,  3.,  0.]])"
+       "array([[ 3.,  1.,  5.,  8.,  1.,  9.,  4.,  8.,  5., 10.,  2.,  2.],\n",
+       "       [ 9.,  2.,  6.,  9.,  2.,  4.,  9.,  7., 10.,  7.,  5.,  2.],\n",
+       "       [ 2.,  0.,  0.,  2.,  0.,  1.,  1.,  2.,  2.,  2.,  0.,  0.],\n",
+       "       [ 2.,  0.,  3.,  2.,  1.,  1.,  1.,  2.,  1.,  1.,  0.,  1.],\n",
+       "       [ 1.,  0.,  0.,  1.,  0.,  1.,  2.,  2.,  3.,  2.,  0.,  0.],\n",
+       "       [ 9.,  0.,  3., 10.,  0.,  6.,  9.,  9., 10., 10.,  3.,  0.],\n",
+       "       [ 8.,  0.,  5.,  8.,  1.,  6., 10.,  6., 10., 10.,  0.,  1.],\n",
+       "       [ 5.,  1.,  3.,  2.,  0.,  2.,  4.,  3.,  4.,  6.,  1.,  0.]])"
       ]
      },
      "execution_count": 8,
@@ -420,13 +420,13 @@
      "data": {
       "text/plain": [
        "array([[ 1.,  1.,  2.,  0.,  0.,  2.,  2.,  1.,  1.,  1.,  0.,  3.],\n",
-       "       [ 8.,  4., 10.,  1.,  8.,  2.,  4.,  7.,  4.,  6.,  1.,  9.],\n",
-       "       [ 2.,  4.,  2.,  0.,  0.,  0.,  2.,  1.,  1.,  3.,  0.,  1.],\n",
-       "       [ 6.,  6.,  3.,  1.,  4.,  2.,  1.,  5.,  1.,  5.,  2., 10.],\n",
-       "       [ 6.,  9.,  3.,  2.,  4.,  1.,  2.,  9.,  4.,  5.,  1.,  8.],\n",
-       "       [ 5.,  5.,  5.,  0.,  7.,  1.,  4.,  8.,  4.,  3.,  1.,  3.],\n",
-       "       [ 5.,  5.,  3.,  2.,  8.,  3.,  2.,  5.,  6.,  0.,  0.,  7.],\n",
-       "       [ 5.,  1.,  1.,  0.,  0.,  0.,  1.,  6.,  1.,  4.,  1.,  4.]])"
+       "       [ 0.,  3.,  0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  1.],\n",
+       "       [ 0.,  0.,  1.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 7.,  3.,  5.,  2.,  8.,  1.,  3.,  8.,  5.,  3.,  0.,  5.],\n",
+       "       [ 6.,  5.,  7.,  1.,  6.,  3.,  4.,  3.,  5.,  3.,  1., 10.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.,  0.,  1.,  2.,  0.,  0.,  0.,  0.],\n",
+       "       [ 2.,  2.,  3.,  0.,  4.,  3.,  0.,  1.,  2.,  4.,  2.,  5.],\n",
+       "       [ 5.,  2.,  2.,  0.,  5.,  1.,  5.,  1.,  9.,  3.,  3.,  3.]])"
       ]
      },
      "execution_count": 9,
@@ -508,7 +508,7 @@
     "# Shouldn't we generate the random initial data starting from W?\n",
     "# random_initial_data.W = test_data.W\n",
     "# random_initial_data.Z = sample_Z_from_W(test_data.W, k, seed=1969)\n",
-    "# "
+    "# ..."
    ]
   },
   {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "dd459cbb",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "e1c70f66",
    "metadata": {},
    "outputs": [],
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "afdbfdd9",
    "metadata": {},
    "outputs": [],
@@ -918,8 +918,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "edbe9867",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Binder loss function\n",
+    "# Sum for i < j -> 1 error for each pair that is equal in one and different in the other\n",
+    "\n",
+    "def binder_loss(Z_sample, Z_true):\n",
+    "    # Input: Z_sample, Z_true matrices -> We only need the cluster indexes\n",
+    "    # Output: err scalar -> Sum of errors\n",
+    "    if Z_sample.shape != Z_true.shape:\n",
+    "        raise Exception('Error: Z matrices of different shape')\n",
+    "    # Idea: Turn matrices into single row to check all pairs more easily\n",
+    "    # First element checks all next elements\n",
+    "    # Get all possible pairs without repeating\n",
+    "    sample = Z_sample.flatten()\n",
+    "    true = Z_true.flatten()\n",
+    "    err = 0\n",
+    "    for i in range(len(sample)):  # Take the index of the first element of the pair\n",
+    "        for j in range(len(sample)-i):  # Index of the second element (taken from i onwards)\n",
+    "            # See only equals -> absolute of the difference\n",
+    "            # Eq + Eq -> abs(1-1) = 0 no error\n",
+    "            # Eq + Diff or Diff + Eq -> abs(1-0) = abs(0-1) = 1 error\n",
+    "            # Dif + Diff -> abs(0-0) = 0 no error\n",
+    "            equal_sample = int(sample[i]==sample[j])\n",
+    "            equal_true = int(true[i]==true[j])\n",
+    "            err += abs(equal_sample - equal_true)\n",
+    "    return err"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "burning-spread",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "117926"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Testing\n",
+    "binder_loss(Z_sample, test_data.Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "changing-valentine",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "# Check that the Sampler works properly (This will take a while)\n",
+    "errors = []\n",
+    "\n",
+    "burn_in = 1000\n",
+    "for i in range(5000):\n",
+    "    Z_sample_old = Z_sample.copy()\n",
+    "    E_sample_old = E_sample.copy()\n",
+    "    Z_sample, E_sample, C_sample = MC_sample_Z(Z_sample, W_copy, Theta_copy, B_copy, E_sample, C_sample)\n",
+    "    if i == burn_in:\n",
+    "        print('Finished burn in')\n",
+    "    if i >= burn_in:\n",
+    "        errors.append(binder_loss(Z_sample, test_data.Z))  # Computing Binder loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "spatial-resolution",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Error will always be positive and integer, but is it skewed to the left?\n",
+    "errors = pd.Series(errors)\n",
+    "print(\"Error metrics\")\n",
+    "print(errors.describe())\n",
+    "errors.hist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "disturbed-disaster",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "errors.plot()  # See if we still have a caterpillar"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "understanding-myanmar",
    "metadata": {},
    "outputs": [],
    "source": []
