Fixed bug in bdmcmc.R, fixed bug in main cycle, fixed bug in MC_sample_GK

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2690,7 +2690,7 @@
     "    G = serialize_matrix(G)\n",
     "    \n",
     "    # Transform H into the BDGraph data matrix\n",
-    "    data_matrix = H_sample.T.dot(H_sample)\n",
+    "    data_matrix = H.T.dot(H)\n",
     "    data_matrix = serialize_matrix(data_matrix)\n",
     "    \n",
     "    # call R script using python.subprocess\n",
@@ -3486,14 +3486,18 @@
     }
    ],
    "source": [
-    "max_iteration = 20\n",
+    "%%time\n",
+    "max_iterations = 1000\n",
+    "np.random.seed(25041945)\n",
     "\n",
     "# Initialization\n",
-    "Sigma = initial.Sigma\n",
+    "Sigma = initial.Sigma.copy()\n",
     "K = np.linalg.inv(Sigma)\n",
-    "B = initial.B\n",
-    "Theta = initial.Theta\n",
-    "G = initial.G\n",
+    "B = initial.B.copy()\n",
+    "Theta = initial.Theta.copy()\n",
+    "G = initial.G.copy()\n",
+    "\n",
+    "G_target = np.triu(simulated_data.G)  # BDgraph always returns upper triangular matrix. Our target matrix should be the same\n",
     "\n",
     "alpha = np.ones(V)  # Uninformative prior\n",
     "b = k - 1\n",
@@ -3503,8 +3507,10 @@
     "E = update_E(np.zeros((D, k)), Z)  # Transformation of Z\n",
     "C = update_C(np.zeros((k, V)), Z)  # Transformation of Z\n",
     "\n",
+    "waiting_times = []\n",
+    "sampled_Gs = []\n",
     "\n",
-    "for iteration in range(max_iteration):\n",
+    "for iteration in range(max_iterations):\n",
     "    \n",
     "    # Step 1\n",
     "    Z, E, C = MC_sample_Z(Z, simulated_data.W, Theta, B, E, C) \n",
@@ -3522,11 +3528,15 @@
     "    if np.all(G_new == G_old):\n",
     "        print('G matrix has NOT changed!')\n",
     "    G = G_new\n",
+    "    Sigma = np.linalg.inv(K)\n",
+    "    \n",
+    "    waiting_times.append(wt_sample)\n",
+    "    sampled_Gs.append(G.copy())\n",
     "    \n",
     "    # Hope for convergence!\n",
-    "    wrong_edges = np.sum(G != simulated_data.G)\n",
+    "    wrong_edges = np.sum(G != G_target)\n",
     "    error = np.linalg.norm(Sigma - simulated_data.Sigma)\n",
-    "    print(f\"At iteration {iteration}, the wrong edges are {wrong_edges} and the error on Sigma is {error}\")\n",
+    "    print(f\"At iteration {iteration}, the wrong edges are {wrong_edges} and the error on Sigma is {error}. Waiting time {wt_sample}\")\n",
     "    \n",
     "    if iteration%10==0:  # Plot every 10 iterations\n",
     "        plt.matshow(G, cmap='Blues')\n",
