Increased serialization precision. Added serialization test.

--- a/2021-11-22_Prototype.ipynb
+++ b/2021-11-22_Prototype.ipynb
@@ -2649,9 +2649,243 @@
     "    return '\"' + res + '\"'\n",
     "\n",
     "def deserialize_matrix(line, shape, separator=' '):\n",
-    "    return np.fromstring(line, sep=separator).reshape(shape)\n",
-    "\n",
-    "\n",
+    "    return np.fromstring(line, sep=separator).reshape(shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "12db59a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This function is only used to test if the serialization and deserialization functions between R and python work properly\n",
+    "def serialization_function_test(n_tests=200, shape=(8,17)):    \n",
+    "    results = []\n",
+    "    for _ in range(n_tests):\n",
+    "        \n",
+    "        # Generate random matrix\n",
+    "        test_matrix = np.random.random(shape) * 100\n",
+    "        \n",
+    "        # Serialize matrix\n",
+    "        serialized_test_matrix = serialize_matrix(test_matrix)\n",
+    "        \n",
+    "        # Send to R script\n",
+    "        command = f\"Rscript --vanilla serialize_matrix_test.R {serialized_test_matrix}\"\n",
+    "        result = subprocess.run(command, \n",
+    "                                shell=True, \n",
+    "                                capture_output=True,\n",
+    "                                text=True)\n",
+    "        \n",
+    "        # Deserialize from R output\n",
+    "        deserialized_test_matrix = deserialize_matrix(result.stdout, shape=shape)\n",
+    "        differences = np.abs(test_matrix-deserialized_test_matrix)\n",
+    "        max_diff = np.max(differences)\n",
+    "        min_diff = np.min(differences)\n",
+    "        diff_sum = np.sum(differences)\n",
+    "        results.append({'max_diff': max_diff, 'min_diff': min_diff, 'diff_sum': diff_sum})\n",
+    "    return pd.DataFrame(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "c8aa924f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max_diff</th>\n",
+       "      <th>min_diff</th>\n",
+       "      <th>diff_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>7.105427e-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.105427e-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       max_diff  min_diff      diff_sum\n",
+       "0  0.000000e+00       0.0  0.000000e+00\n",
+       "1  0.000000e+00       0.0  0.000000e+00\n",
+       "2  7.105427e-15       0.0  7.105427e-15\n",
+       "3  0.000000e+00       0.0  0.000000e+00\n",
+       "4  0.000000e+00       0.0  0.000000e+00"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_result_df = serialization_function_test()\n",
+    "test_result_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "49e4c1af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>max_diff</th>\n",
+       "      <th>min_diff</th>\n",
+       "      <th>diff_sum</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>2.000000e+02</td>\n",
+       "      <td>200.0</td>\n",
+       "      <td>2.000000e+02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>7.993606e-17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.993606e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>7.189177e-16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.189177e-16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.105427e-15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>7.105427e-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           max_diff  min_diff      diff_sum\n",
+       "count  2.000000e+02     200.0  2.000000e+02\n",
+       "mean   7.993606e-17       0.0  7.993606e-17\n",
+       "std    7.189177e-16       0.0  7.189177e-16\n",
+       "min    0.000000e+00       0.0  0.000000e+00\n",
+       "25%    0.000000e+00       0.0  0.000000e+00\n",
+       "50%    0.000000e+00       0.0  0.000000e+00\n",
+       "75%    0.000000e+00       0.0  0.000000e+00\n",
+       "max    7.105427e-15       0.0  7.105427e-15"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_result_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "cf48547a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def MC_sample_GK(G, H, degrees_of_freedom_b, debug=False):\n",
     "    size = G.shape[0]\n",
     "    n = H.shape[0]\n",
