--- a/02.2_Sampling_B.ipynb
+++ b/02.2_Sampling_B.ipynb
@@ -424,9 +424,9 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3.8 (d2)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "d2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
