--- a/02.2_Sampling_B.ipynb
+++ b/02.2_Sampling_B.ipynb
@@ -7,17 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
-    "D = 8 # Amount of documents\n",
-    "V = 12 # Size of the vocabulary\n",
-    "\n",
-    "# (Approximate) Maximum allowed amount of same word repetition in a document (it may be lower in practise due to the data generation strategy)\n",
-    "# To get the actual maximum amount, call Simulator.get_M\n",
-    "M = 10 \n",
-    "\n",
-    "\n",
-    "k = 5 # Amount of topics\n",
-    "gamma = 0.2  #"
+    "from const import globs"
    ]
   },
   {
@@ -28,17 +18,8 @@
    "outputs": [],
    "source": [
     "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
-    "D = 100 # Amount of documents\n",
-    "V = 18 # Size of the vocabulary\n",
     "\n",
-    "# (Approximate) Maximum allowed amount of same word repetition in a document (it may be lower in practise due to the data generation strategy)\n",
-    "# To get the actual maximum amount, call Simulator.get_M\n",
-    "M = 5 \n",
-    "\n",
-    "k = 6 # Amount of topics\n",
-    "gamma = 0.2\n",
-    "\n",
-    "# FA: Since we're testing so much, lets agree on using just 1 small set of global variables for now"
+    "D, V, M, k, gamma = globs('l')"
    ]
   },
   {
@@ -430,7 +411,7 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -444,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
