--- a/04_Main_Cycle_alt.ipynb
+++ b/04_Main_Cycle_alt.ipynb
@@ -19,16 +19,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
-    "D = 100 # Amount of documents\n",
-    "V = 18 # Size of the vocabulary\n",
-    "\n",
-    "# (Approximate) Maximum allowed amount of same word repetition in a document (it may be lower in practise due to the data generation strategy)\n",
-    "# To get the actual maximum amount, call Simulator.get_M\n",
-    "M = 5 \n",
-    "\n",
-    "k = 6 # Amount of topics\n",
-    "gamma = 0.2"
+    "from const import globs\n",
+    "from matplotlib import pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -38,9 +32,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "import numpy as np\n",
-    "import pandas as pd"
+    "# GLOBAL VARIABLES. BE SURE NOT TO OVERWRITE THEM\n",
+    "\n",
+    "D, V, M, k, gamma = globs('l')"
    ]
   },
   {
