--- a/04_Main_Cycle_alt.ipynb
+++ b/04_Main_Cycle_alt.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "3abf6dad",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "e471e566",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff6097b1720>"
+       "<matplotlib.image.AxesImage at 0x7f1007d5a980>"
       ]
      },
      "execution_count": 6,
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e26a4c7e",
    "metadata": {},
    "outputs": [
@@ -1008,10 +1008,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7ff60756fb20>"
+       "<matplotlib.image.AxesImage at 0x7f1005c52e90>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "6a14b9cd",
    "metadata": {},
    "outputs": [
@@ -1057,32 +1057,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "14\n",
       "Now at iteration 0/5000\n",
-      "Now at iteration 500/5000\n",
-      "Now at iteration 1000/5000\n",
-      "Now at iteration 1500/5000\n",
-      "Now at iteration 2000/5000\n",
-      "Now at iteration 2500/5000\n",
-      "Now at iteration 3000/5000\n"
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/fpjaa/Documents/GitHub/BAY-STATS-Project-ABDPPS/samplers.py:100: RuntimeWarning: overflow encountered in exp\n",
-      "  sum_eta = np.sum(np.exp(eta))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Now at iteration 3500/5000\n",
-      "Now at iteration 4000/5000\n",
-      "Now at iteration 4500/5000\n",
-      "CPU times: user 1h 20min 43s, sys: 27min 11s, total: 1h 47min 55s\n",
-      "Wall time: 1h 31min 55s\n"
+     "ename": "TypeError",
+     "evalue": "'numpy.int64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[0;32m<timed exec>:76\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.int64' object is not callable"
      ]
     }
    ],
@@ -1121,7 +1110,7 @@
     "graph_changes1 = []\n",
     "edges_log1 = []\n",
     "errors_log1 = []\n",
-    "\n",
+    "graph_losses1 = []\n",
     "\n",
     "for iteration in range(max_iterations):\n",
     "    \n",
@@ -1140,6 +1129,7 @@
     "    Berrors1.append(err_by_it)\n",
     "    \n",
     "    permute = permutation_topics(B_true=simulated_data.B, B_sampled=B)\n",
+    "    #print(permute)\n",
     "    \n",
     "    # Step 3\n",
     "    H, step = MC_sample_H(E, Sigma, K, step_size=step, H_current=H, burn_in=15)\n",
@@ -1161,6 +1151,10 @@
     "    error = np.linalg.norm(Sigma - simulated_data.Sigma)\n",
     "    edges_log1.append(wrong_edges)\n",
     "    errors_log1.append(error)\n",
+    "    \n",
+    "    graph_loss = graph_loss(G_true=simulated_data.G, G_sampled=G, permutation=permute)\n",
+    "    #print(graph_loss)\n",
+    "    graph_losses1.append(graph_loss)\n",
     "    \n",
     "    if iteration%500==0:\n",
     "        print('Now at iteration '+str(iteration)+'/'+str(max_iterations))\n",
@@ -1250,13 +1244,12 @@
     "plt.suptitle('B marginal changes histogram', x=0.5, y=1, ha='center')\n",
     "plt.show()\n",
     "\n",
-    "B_conv.plot(title=\"B convergence series\")  # Find where it stabilizes\n",
-    "# TODO: Add the finder for a certain threshold and plot the vertical line of the iteration and save variable\n",
-    "cut = 2100\n",
+    "B_conv.plot(title=\"B convergence series\")\n",
+    "cut = 1000  # It will be a standard burn in\n",
     "plt.axvline(x=cut, color='red', linestyle='--')\n",
     "plt.show()\n",
     "\n",
-    "B_conv[0:200].plot(title=\"B convergence series: First 200 iterations\")\n",
+    "B_conv[0:cut].plot(title=\"B convergence series: First iterations\")\n",
     "plt.show()\n",
     "\n",
     "B_conv[cut:].plot(title=\"B convergence series: Last iterations\")\n",
@@ -1899,7 +1892,11 @@
     "    \n",
     "filename = 'errors_log.pkl'\n",
     "with open(timestamp + '_' + filename, 'wb+') as f:  # opens a (new) file in write byte mode \n",
-    "    pickle.dump(errors_log1, f)"
+    "    pickle.dump(errors_log1, f)\n",
+    "\n",
+    "filename = 'graph_losses.pkl'\n",
+    "with open(timestamp + '_' + filename, 'wb+') as f:  # opens a (new) file in write byte mode \n",
+    "    pickle.dump(graph_losses1, f)"
    ]
   },
   {
