--- a/03.4_Test_graph_loss.ipynb
+++ b/03.4_Test_graph_loss.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "7353440c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from const import globs\n",
+    "import ipykernel\n",
+    "ipykernel.__version__\n",
     "\n",
     "D, V, M, k, gamma = globs('l')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "d9161220",
    "metadata": {},
    "outputs": [],
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "86bcad58",
    "metadata": {},
    "outputs": [],
@@ -66,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "82444cdd",
    "metadata": {},
    "outputs": [
@@ -89,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "043a1144",
    "metadata": {},
    "outputs": [
@@ -105,7 +107,7 @@
        "       [2., 1., 0., ..., 1., 2., 3.]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "50d5eae4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7a1daa1a00>"
+       "<matplotlib.image.AxesImage at 0x7fb17512a580>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "da4bf0d3",
    "metadata": {},
    "outputs": [
@@ -177,10 +179,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f7a1dc118e0>"
+       "<matplotlib.image.AxesImage at 0x7fb1752912e0>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -218,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "626496a1",
    "metadata": {},
    "outputs": [
@@ -227,56 +229,35 @@
      "output_type": "stream",
      "text": [
       "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
-      "BEFORE FOR\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
-      "G_PERM\n",
-      "<class 'numpy.ndarray'>\n",
-      "G_SAMPLED\n",
-      "<class 'numpy.ndarray'>\n",
-      "NEW RETURN\n",
-      "6.0\n",
+      "Before graph loss\n",
+      "After graph loss\n",
       "Finished iteration 0\n",
-      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n"
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "Before graph loss\n",
+      "After graph loss\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "Before graph loss\n",
+      "After graph loss\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "Before graph loss\n",
+      "After graph loss\n",
+      "[0.0, 1.0, 2.0, 3.0, 4.0, 5.0]\n",
+      "Before graph loss\n",
+      "After graph loss\n"
      ]
     },
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not callable",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
       "\u001b[0;32m<timed exec>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+      "\u001b[0;32m~/Desktop/Bayesian Project/BAY-STATS-Project-ABDPPS/samplers.py\u001b[0m in \u001b[0;36mMC_sample_Z\u001b[0;34m(Z, W, Theta, B, E, C, debug)\u001b[0m\n\u001b[1;32m     57\u001b[0m                     \u001b[0mRho\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRho\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRho\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 59\u001b[0;31m                     \u001b[0mz_hat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchoice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mRho\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m                     \u001b[0mE\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0md\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz_hat\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mmtrand.pyx\u001b[0m in \u001b[0;36mnumpy.random.mtrand.RandomState.choice\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mprod\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -357,8 +338,8 @@
     "    waiting_times.append(wt_sample)\n",
     "    sampled_Gs.append(G.copy())\n",
     "    \n",
-    "    #graph_loss = graph_loss(G_true=simulated_data.G, G_sampled=G, permutation=permute)\n",
-    "    graph_losses.append(graph_loss)\n",
+    "    graph_losss = graph_loss(G_true=simulated_data.G, G_sampled=G, permutation=permute)\n",
+    "    graph_losses.append(graph_losss)\n",
     "    \n",
     "    if iteration % 100 == 0:  # Plot every 20 iterations\n",
     "        print('Finished iteration '+str(iteration))\n",
