--- a/02.4_Sampling_G_K.ipynb
+++ b/02.4_Sampling_G_K.ipynb
@@ -799,6 +799,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "4dd95e92-8f9c-42a4-98bb-e2afc54a596c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graphs = []\n",
+    "counts = []\n",
+    "cut=4000\n",
+    "max_iterations=5000\n",
+    "not_found = True\n",
+    "for it in range(cut,max_iterations):\n",
+    "    not_found = True\n",
+    "    for j in range(len(graphs)):\n",
+    "        if np.all(sampled_Gs1[it] == graphs[j]):\n",
+    "            counts[j] += wt_sample[it]\n",
+    "            not_found = False\n",
+    "    if not_found:\n",
+    "        graphs.append(sampled_Gs1[it])\n",
+    "        counts.append(wt_sample[it])\n",
+    "\n",
+    "plt.bar(range(len(counts)),counts)\n",
+    "plt.suptitle('Sampled graphs histogram', x=0.5, y=1, ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "modes = pd.Series(counts).sort_values()\n",
+    "\n",
+    "plt.matshow(graphs[counts.index(modes[0])], cmap='Blues')\n",
+    "plt.suptitle(\"Most frequent graph in stable region\", x=0.5, y=1, ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "plt.matshow(graphs[counts.index(modes[1])], cmap='Blues')\n",
+    "plt.suptitle(\"Second most frequent graph in stable region\", x=0.5, y=1, ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "plt.matshow(graphs[counts.index(modes[2])], cmap='Blues')\n",
+    "plt.suptitle(\"Third most frequent graph in stable region\", x=0.5, y=1, ha='center')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2bac831-31af-4996-bb23-29a492d0353b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b086450-3ed6-4914-b3e8-ba4b9c33b057",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "we = [] #wrong edges unique\n",
+    "counts = []\n",
+    "cut=4000\n",
+    "max_iterations=5000\n",
+    "not_found = True\n",
+    "for it in range(cut,max_iterations):\n",
+    "    not_found = True\n",
+    "    for j in range(len(we)):\n",
+    "        if np.all(wrong_edges[it] == we[j]):\n",
+    "            counts[j] += wt_sample[it]\n",
+    "            not_found = False\n",
+    "    if not_found:\n",
+    "        we.append(wrong_edges[it])\n",
+    "        counts.append(wt_sample[it])\n",
+    "\n",
+    "plt.hist(we, weights=counts)\n",
+    "plt.suptitle('Wrong Edges histogram', x=0.5, y=1, ha='center')\n",
+    "plt.show()\n",
+    "\n",
+    "modes = pd.Series(counts).sort_values()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "739f12f5-a0ce-46bb-9324-1f2b13be6571",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9de7ae0c-a1b8-4076-8c59-d9ec39b716f5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "id": "711d18e0",
    "metadata": {},
@@ -974,7 +1068,7 @@
    "hash": "a803b5bf187bf95155bcb05f6102b06519856e9ee60d4a9ebc29561a74488513"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -988,7 +1082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
